# python-project-template

./: LICENSE.txt  README.md  init.py  pyproject.toml
src/$PACKAGE$/: $IFDEF:CLI$__main__.py$ENDIF:CLI$  __about__.py  __init__.py
src/$PACKAGE$/$IFDEF:CLI$cli$ENDIF:CLI$/: __init__.py
src/__PACKAGE__/: #__IFDEF:CLI__#__main__.py#__ENDIF:CLI__#  __about__.py
src/__PYNAME__/: __about__.py  __main__.py
src/__PYNAME__/cli/: __init__.py
