[project]
name = "__PROJECT__"
description = "__DESC__"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name = "__AUTHOR__", email = "__EMAIL__" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "typer",
]
dynamic = [
    "version"
]

[project.urls]
Documentation = "https://github.com/__REPO__#readme"
Issues = "https://github.com/__REPO__/issues"
Source = "https://github.com/__REPO__"

[project.scripts]
#__IFDEF:CLI__#
__COMMAND__ = "__PACKAGE__.cli:app"
#__ENDIF:CLI__#



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.hatch.version]
path = "src/__PACKAGE__/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/marks_calc --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]



[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
